src/test/ui/compile-fail-migration/borrowck/borrowck-init-in-fru.ast.nll.stderr
error[E0381]: use of possibly uninitialized variable: `origin.y`
  --> $DIR/borrowck-init-in-fru.rs:22:5
   |
LL |     origin = point {x: 10,.. origin};
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of possibly uninitialized `origin.y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
